# estagio-desenvolvimento-web

./: .gitignore  README.md  docker-compose.yml
apps/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
apps/services/core-service/: .dockerignore  Dockerfile  README.md  alembic.ini  env_example  pyproject.toml  requirements.txt  ruff.toml
apps/services/core-service/alembic/: env.py
apps/services/core-service/alembic/versions/: 001_initial_schema_and_seed.py
apps/services/core-service/app/: main.py
apps/services/core-service/app/api/: deps.py
apps/services/core-service/app/api/v1/: auth.py  health.py  sobre.py
apps/services/core-service/app/core/: config.py  database.py  rabbitmq.py  seed_mongo.py
apps/services/core-service/app/models/: tutorial.py
apps/services/core-service/app/repositories/: tutorial_repository.py
apps/services/core-service/app/schemas/: tutorial.py  usuario.py
apps/services/core-service/app/services/: tutorial_service.py
apps/services/core-service/app/workers/: audit_worker.py
apps/services/core-service/tests/: __init__.py  conftest.py  test_api.py  test_auth_basico.py  test_repository.py
docs/01_planejamento_metodologia/: cronograma_aulas_2026_2.md  plano_curso_estagio_ii.md  requisitos_laboratorio_ti.md  roadmap_sprints.md
docs/02_engenharia_software/: atividade_auth_sprint2.md  contexto_problematica_hotelaria.md  git_github_basico.md  requisitos_casos_uso.md
docs/03_arquitetura_tecnica/: arquitetura_backend_fastapi.md  arquitetura_frontend.md  arquitetura_projeto_backend.md  (+4 more)
(+14 files in other folders)
