[tool.poetry]
name = "core-service"
version = "0.1.0"
description = "Servico principal do Sistema de Reservas de Rede Hoteleira"
authors = ["Alpha Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
motor = "^3.3.2"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
